--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,7 @@
 <app-header></app-header>
 <section class="py-5">
     <div class="container">
-        <app-car></app-car>
+        <router-outlet></router-outlet>
     </div>
 </section>
+<!-- <app-auth></app-auth> -->
