--- a/src/app/core/layouts/header/header.component.html
+++ b/src/app/core/layouts/header/header.component.html
@@ -1,7 +1,7 @@
-<header class="bg-dark py-2">
-    <div class="container px-4 px-lg-5 my-5">
+<!-- <header class="bg-dark py-2">
+    <div class="container px-1 px-lg-1 my-1">
         <div class="text-center text-white">
             <h1 class="display-4 fw-bolder">Renting Car</h1>
         </div>
     </div>
-</header>
+</header> -->
