--- a/src/app/core/layouts/navbar/navbar.component.html
+++ b/src/app/core/layouts/navbar/navbar.component.html
@@ -9,7 +9,9 @@
                 <li class="nav-item"><a class="nav-link" aria-current="page" href="#!">Home</a></li>
                 <li class="nav-item"><a class="nav-link" href="#!">About</a></li>
             </ul>
-            <ul class="navbar-nav">
+            <ul
+            *ngIf="isLogin === false"
+            class="navbar-nav">
                 <li class="nav-item"><a class="nav-link" href="#">Login</a></li>
                 <li class="nav-item"><a class="nav-link" href="#">Register</a></li>
             </ul>
