--- a/src/app/features/car/car.component.html
+++ b/src/app/features/car/car.component.html
@@ -10,5 +10,5 @@
 </div>
 <div class="d-flex flex-xl-row flex-sm-column justify-content-center">
     <pagination-controls (pageChange)="pageChange($event)"></pagination-controls>
-    <input class="d-inline form-control w-25" placeholder="Car's name" [(ngModel)]="name" (input)="handleNameChange()">
+    <input class="d-inline form-control w-25 mr-5" placeholder="Car's name" [(ngModel)]="name" (input)="handleNameChange()">
 </div>
