--- a/src/app/features/car/car-infor/car-infor.component.html
+++ b/src/app/features/car/car-infor/car-infor.component.html
@@ -12,6 +12,7 @@
                 <h6>{{car.carDescription}}</h6>
             </div>
             <button 
+                (click)="handleRenting()"
                 class="btn btn-primary w-100"
                 [ngClass]="{'disabled': isSelected}">
                 Rent
