--- a/src/app/core/layouts/navbar/navbar.component.html
+++ b/src/app/core/layouts/navbar/navbar.component.html
@@ -9,11 +9,15 @@
                 <li class="nav-item"><a class="nav-link" aria-current="page" href="#!">Home</a></li>
                 <li class="nav-item"><a class="nav-link" href="#!">About</a></li>
             </ul>
-            <ul
-            *ngIf="isLogin === false"
-            class="navbar-nav">
-                <li class="nav-item"><a class="nav-link" href="#">Login</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Register</a></li>
+            <ul class="navbar-nav">
+                <li *ngIf="!isLogined" class="nav-item"><a class="nav-link" href="#">Login</a></li>
+                <li *ngIf="!isLogined" class="nav-item"><a class="nav-link" href="#">Register</a></li>
+                <button *ngIf="isLogined && isAdmin === false" class="btn btn-outline-dark" type="submit">
+                    <i class="bi-cart-fill me-1"></i>
+                    Cart
+                    <span class="badge bg-dark text-white ms-1 rounded-pill">{{numberOfCars}}</span>
+                </button>
+                <li *ngIf="isLogined" class="nav-item" (click)="logout()"><a href="" class="nav-link">Logout</a></li>
             </ul>
         </div>
     </div>
