--- a/src/app/features/car/car.component.html
+++ b/src/app/features/car/car.component.html
@@ -1,5 +1,6 @@
 <div class="d-flex flex-xl-row flex-sm-column justify-content-center">
     <app-car-infor
+        (rentingEvent)="addToCart($event)"
         class="w-25"
         *ngFor="let car of carResult.values | 
             paginate: {
