--- a/src/app/core/layouts/navbar/navbar.component.html
+++ b/src/app/core/layouts/navbar/navbar.component.html
@@ -12,7 +12,7 @@
             <ul class="navbar-nav">
                 <li *ngIf="!isLogined" class="nav-item"><a class="nav-link" href="#">Login</a></li>
                 <li *ngIf="!isLogined" class="nav-item"><a class="nav-link" href="#">Register</a></li>
-                <button *ngIf="isLogined && isAdmin === false" class="btn btn-outline-dark" type="submit">
+                <button *ngIf="isLogined && isAdmin === false" class="btn btn-outline-dark" (click)="moveToCart()">
                     <i class="bi-cart-fill me-1"></i>
                     Cart
                     <span class="badge bg-dark text-white ms-1 rounded-pill">{{numberOfCars}}</span>
