--- a/src/app/core/auth/auth.component.html
+++ b/src/app/core/auth/auth.component.html
@@ -25,17 +25,18 @@
                                     </div>
                                 </div>
                             </div> -->
+                            <h1>Sign in</h1>
                             <div class="form-outline mb-4">
-                                <label class="form-label" for="form3Example3">Email address:</label>
+                                <label class="form-label">Email address:</label>
                                 <input type="email" formControlName="email" class="form-control" />
                                 <span
                                 class="text-danger"
                                 *ngIf="authForm.get('email').invalid && (authForm.get('email').dirty || authForm.get('email').touched)">
-                                    Please enter correct email
+                                    Please enter email
                                 </span>
                             </div>
                             <div class="form-outline mb-4">
-                                <label class="form-label" for="form3Example4">Password:</label>
+                                <label class="form-label">Password:</label>
                                 <input type="password" formControlName="password" class="form-control" />
                                 <span
                                 class="text-danger"
