--- a/src/app/core/layouts/navbar/navbar.component.html
+++ b/src/app/core/layouts/navbar/navbar.component.html
@@ -6,11 +6,11 @@
                 class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
-                <li class="nav-item"><a class="nav-link" aria-current="page" href="#!">Home</a></li>
+                <li class="nav-item"><a class="nav-link" aria-current="page" [routerLink]="['/home']">Home</a></li>
                 <li class="nav-item"><a class="nav-link" href="#!">About</a></li>
             </ul>
             <ul class="navbar-nav">
-                <li *ngIf="!isLogined" class="nav-item"><a class="nav-link" href="#">Login</a></li>
+                <li *ngIf="!isLogined" class="nav-item"><a class="nav-link" [routerLink]="['/login']">Login</a></li>
                 <li *ngIf="!isLogined" class="nav-item"><a class="nav-link" href="#">Register</a></li>
                 <button *ngIf="isLogined && isAdmin === false" class="btn btn-outline-dark" (click)="moveToCart()">
                     <i class="bi-cart-fill me-1"></i>
