--- a/src/app/core/layouts/navbar/navbar.component.html
+++ b/src/app/core/layouts/navbar/navbar.component.html
@@ -1,23 +1,45 @@
-<nav class="navbar navbar-fixed-top sticky-top navbar-expand-lg">
+<nav *ngIf="!isAdmin" class="navbar navbar-fixed-top sticky-top navbar-expand-lg">
     <div class="container px-4 px-lg-5">
-        <a class="navbar-brand" href="#!">FU Renting cars</a>
+        <a class="navbar-brand" [routerLink]="['/home']">FU Renting cars</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span
                 class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
-                <li class="nav-item"><a class="nav-link" aria-current="page" [routerLink]="['/home']">Home</a></li>
-                <li class="nav-item"><a class="nav-link" href="#!">About</a></li>
+                <li class="nav-item"><a class="nav-link" [routerLink]="['/home']" [routerLinkActive]="['active']">Home</a></li>
+                <li
+                *ngIf="isLogined" 
+                class="nav-item">
+                    <a class="nav-link" [routerLink]="['/user-profile']" >Profile</a>
+                </li>
             </ul>
             <ul class="navbar-nav">
-                <li *ngIf="!isLogined" class="nav-item"><a class="nav-link" [routerLink]="['/login']">Login</a></li>
+                <li *ngIf="!isLogined" class="nav-item"><a class="nav-link" [routerLink]="['/login']" [routerLinkActive]="['active']">Login</a></li>
                 <li *ngIf="!isLogined" class="nav-item"><a class="nav-link" href="#">Register</a></li>
-                <button *ngIf="isLogined && isAdmin === false" class="btn btn-outline-dark" (click)="moveToCart()">
+                <button *ngIf="isLogined" class="btn btn-outline-dark" (click)="moveToCart()">
                     <i class="bi-cart-fill me-1"></i>
                     Cart
                     <span class="badge bg-dark text-white ms-1 rounded-pill">{{numberOfCars}}</span>
                 </button>
                 <li *ngIf="isLogined" class="nav-item" (click)="logout()"><a href="" class="nav-link">Logout</a></li>
+            </ul>
+        </div>
+    </div>
+</nav>
+
+<nav *ngIf="isAdmin" class="navbar navbar-fixed-top sticky-top navbar-expand-lg">
+    <div class="container px-4 px-lg-5">
+        <a class="navbar-brand" [routerLink]="['/admin']">FU Renting cars</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span
+                class="navbar-toggler-icon"></span></button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
+                <li class="nav-item"><a class="nav-link" [routerLink]="['/admin']" [routerLinkActive]="['active']">Home</a></li>
+                <li class="nav-item"><a class="nav-link" [routerLink]="['cars']">Cars</a></li>
+            </ul>
+            <ul class="navbar-nav">
+                <li class="nav-item" (click)="logout()"><a href="" class="nav-link">Logout</a></li>
             </ul>
         </div>
     </div>
