--- a/src/app/features/cart/cart.component.html
+++ b/src/app/features/cart/cart.component.html
@@ -1,7 +1,7 @@
-<form class="d-flex flex-column align-items-center" (ngSubmit)="onSubmit()">
-    <div *ngFor="let rentingDetail of rentingDetails">
-        <app-cart-detail [rentingDetail]="rentingDetail"></app-cart-detail>
+<form class="d-flex flex-sm-column" (ngSubmit)="onSubmit()">
+    <div class="d-flex flex-row" *ngFor="let rentingDetail of rentingDetails">
+        <app-cart-detail class="renting-detail mb-3" [rentingDetail]="rentingDetail"></app-cart-detail>
     </div>
-    <button [disabled]="rentingFormGroup.invalid" class="btn btn-primary w-50 mt-3">Renting</button>
+    <button [disabled]="rentingFormGroup.invalid || submitted === true" class="btn btn-primary mt-3">Renting</button>
     <span class="text-danger">{{errorMessage}}</span>
 </form>
