--- a/src/app/features/admin/car-table/car-table.component.scss
+++ b/src/app/features/admin/car-table/car-table.component.scss
@@ -3,4 +3,10 @@
 }
 #add-car:hover {
     cursor: pointer;
+    transform: scale(1.01);
+}
+
+#form {
+    display: flex;
+    justify-content: center;
 }
