--- a/src/app/features/admin/create-car/create-car.component.html
+++ b/src/app/features/admin/create-car/create-car.component.html
@@ -1,50 +1,63 @@
 <form class="row" [formGroup]="createForm" (ngSubmit)="handleSubmit()">
     <div class="form-outline">
-        <label class="form-label">Name:</label>
+        <label class="h5 form-label">Name:</label>
         <input type="text" formControlName="carName" class="form-control" />
     </div>
 
     <div class="form-outline col-6">
-        <label class="form-label">Supplier</label>
+        <label class="h5 form-label">Supplier</label>
         <ng-select class="form-control" [virtualScroll]="true" [items]=" suppliers" bindLabel="supplierName"
             bindValue="supplierId" formControlName="supplierId">
         </ng-select>
     </div>
     <div class="form-outline col-6">
-        <label class="form-label">Manufacturer</label>
+        <label class="h5 form-label">Manufacturer</label>
         <ng-select class="form-control" [virtualScroll]="true" [items]=" manufacturers" bindLabel="manufacturerName"
             bindValue="manufacturerId" formControlName="manufacturerId">
         </ng-select>
     </div>
     <div class="form-outline col-6">
-        <label class="form-label">Fuel type</label>
+        <label class="h5 form-label">Fuel type</label>
         <ng-select class="form-control" [virtualScroll]="true" [items]=" fuelTypes" bindLabel="fuelTypes"
             bindValue="fuelTypes" formControlName="fuelType">
         </ng-select>
     </div>
     <div class="form-outline col-6">
-        <label class="form-label">Number of door</label>
+        <label class="h5 form-label">Number of door</label>
         <ng-select class="form-control" [virtualScroll]="true" [items]=" doorNumbers" bindLabel="doorNumbers"
             bindValue="doorNumbers" formControlName="doorNumber">
         </ng-select>
     </div>
     <div class="form-outline">
-        <label class="form-label">Description:</label>
+        <label class="h5 form-label">Description:</label>
         <textarea formControlName="carDescription" class="form-control"></textarea>
     </div>
     <div class="d-flex flex-row justify-content-between">
-        <div class="form-outline col-3">
-            <label class="form-label">Year:</label>
+        <div class="form-outline col-2">
+            <label class="h5 form-label">Year:</label>
             <input type="number" min="1800" formControlName="year" class="form-control" />
         </div>
-        <div class="form-outline col-6">
-            <label class="form-label">Price/Day:</label>
-            <input type="number" min="0" formControlName="carRentingPricePerDay" class="form-control" />
+        <div class="form-outline col-2">
+            <label class="h5 form-label">Price/Day:</label>
+            <input type="number" min="0" step="0.001" formControlName="carRentingPricePerDay" class="form-control" />
+        </div>
+        <div class="form-outline col-2">
+            <label class="h5 form-label">Seating Capacity:</label>
+            <input type="number" min="0" formControlName="seatingCapacity" class="form-control" />
+        </div>
+        <div class="form-outline col-2">
+            <label class="h5 form-label">Status</label>
+            <ng-select class="form-control" [virtualScroll]="true" [items]=" statuses" bindLabel="status"
+                bindValue="value" formControlName="carStatus">
+            </ng-select>
         </div>
     </div>
-
-    <button [disabled]="createForm.invalid || submitted" class="btn btn-primary btn-block mt-4">
-        Create
-    </button>
+    <div class="d-flex flex-column justify-content-center">
+        <button 
+        class="btn btn-primary btn-block mt-2 mb-2" style="width: 30%;">
+            {{btnName}}
+        </button>
+        <span class="text-danger">{{errMsg}}</span>
+    </div>
     <br />
 </form>
